# SOLID

./: README.md
OCP/: OCP_readme.md  OCP_with_dynamicPolymorphism.cpp  OCP_with_dynamicPolymorphism_2.cpp  OCP_with_run_time_concept.cpp  OCP_with_template.cpp  OCP_with_templateSpecialization.cpp  OCP_with_template_C++20_concept.cpp
SRP/: SRP_readme.md
SRP/SRP_Plantcare/: CMakeLists.txt
SRP/SRP_Plantcare/caretaker/: CMakeLists.txt
SRP/SRP_Plantcare/caretaker/inc/: PlantCareTaker.hpp
SRP/SRP_Plantcare/caretaker/src/: PlantCareTaker.cpp
SRP/SRP_Plantcare/main/: CMakeLists.txt  main.cpp
SRP/SRP_Plantcare/sensors/: CMakeLists.txt
SRP/SRP_Plantcare/sensors/inc/: MoistureSensor.hpp  SunlightSensor.hpp
SRP/SRP_Plantcare/sensors/src/: MoistureSensor.cpp  SunlightSensor.cpp
